--- a/My Portfolio/index.html
+++ b/My Portfolio/index.html
@@ -1081,10 +1081,10 @@
                         Full Stack Developer passionate about creating modern, responsive, and user-friendly digital experiences.
                     </p>
                     <div class="d-flex gap-2">
-                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="GitHub">
+                        <a href="https://github.com/Saranyadevi-14?tab=repositories" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="GitHub">
                             <i class="bi bi-github"></i>
                         </a>
-                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="LinkedIn">
+                        <a href="https://www.linkedin.com/in/saranyadevi-t-saranya-b53161293/" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="LinkedIn">
                             <i class="bi bi-linkedin"></i>
                         </a>
                         <a href="mailto:saranyadevi901@gmail.com" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="Email">
@@ -1153,4 +1153,5 @@
     <!-- Custom JS -->
     <script src="js/script.js"></script>
 </body>
+
 </html>
